# cli-translator

./: pyproject.toml
Translator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_main.py
translator/: __init__.py  __main__.py  context.py  engine.py  factory.py  fetcher.py  main.py  parser.py  translator.py  url_generator.py
translator/CambridgeDictionary/: cambridge_parser.py  cambridge_translator.py  cambridge_translator_factory.py  cambridge_urls.py
