[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Translator"
version = "0.0.1"
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
    "click",
    "bs4",
]
[tool.setuptools]
packages = ['translator', 'translator.CambridgeDictionary']

[project.scripts]
translate = "translator.__main__:main"
